--- a/index.html
+++ b/index.html
@@ -408,8 +408,8 @@
                 <div class="feature-icon">
                     <i class="fas fa-cloud"></i>
                 </div>
-                <h3>Backup na Nuvem (Em Breve)</h3>
-                <p>Salve seus mundos, mods e configurações em serviços de nuvem (Google Drive, OneDrive, MEGA e mais).</p>
+                <h3>Skins (Em Breve)</h3>
+                <p>Use skins com o nosso launcher através pelo <a style="color: #21a346", href="https://ely.by/">Ely.by</a>.</p>
             </div>
             <div class="feature-card" data-aos="fade-up" data-aos-delay="500">
                 <div class="feature-icon">
